WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123590
[css shapes] Fix support for shape-outside on a float with padding
https://bugs.webkit.org/show_bug.cgi?id=123590
Summary
[css shapes] Fix support for shape-outside on a float with padding
Bem Jones-Bey
Reported
2013-10-31 14:07:41 PDT
[css shapes] Fix support for shape-outside on a float with padding
Attachments
Patch
(60.75 KB, patch)
2013-10-31 14:11 PDT
,
Bem Jones-Bey
no flags
Details
Formatted Diff
Diff
Rebase
(68.00 KB, patch)
2013-11-04 11:09 PST
,
Bem Jones-Bey
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Bem Jones-Bey
Comment 1
2013-10-31 14:11:42 PDT
Created
attachment 215676
[details]
Patch
Bem Jones-Bey
Comment 2
2013-10-31 14:13:17 PDT
This should not be sent to the CQ until
bug 123588
has landed, in order to avoid a merge conflict.
Bem Jones-Bey
Comment 3
2013-11-04 11:09:04 PST
Created
attachment 215933
[details]
Rebase
Alexandru Chiculita
Comment 4
2013-11-04 11:44:20 PST
Comment on
attachment 215933
[details]
Rebase Thanks Bem!
WebKit Commit Bot
Comment 5
2013-11-04 12:10:29 PST
Comment on
attachment 215933
[details]
Rebase Clearing flags on attachment: 215933 Committed
r158584
: <
http://trac.webkit.org/changeset/158584
>
WebKit Commit Bot
Comment 6
2013-11-04 12:10:32 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug